<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/border"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/contact_name"
        android:textColor="@color/Black"
        android:textSize="24sp"
        android:ellipsize="end"
        android:textStyle="bold"
        app:flow_horizontalBias="0.0"
        app:layout_constraintEnd_toStartOf="@+id/tvGender"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPhone1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/contact_phone1"
        android:textColor="@color/Black"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toEndOf="@+id/phoneicon"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvPhone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/contact_phone2"
        android:textColor="@color/Black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/phoneicon2"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/contact_gender"
        android:textColor="@color/Black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/contact_email"
        android:textColor="@color/Black"
        android:textSize="16sp"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toEndOf="@+id/mailicon"
        app:layout_constraintTop_toBottomOf="@+id/phoneicon" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/contact_address"
        android:textColor="@color/Black"
        android:textSize="16sp"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toEndOf="@+id/houseicon"
        app:layout_constraintTop_toBottomOf="@+id/mailicon" />

    <ImageView
        android:id="@+id/phoneicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:srcCompat="@drawable/ic_baseline_local_phone_24" />

    <ImageView
        android:id="@+id/phoneicon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="5dp"
        app:layout_constraintStart_toEndOf="@+id/tvPhone1"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:srcCompat="@drawable/ic_baseline_local_phone_24" />

    <ImageView
        android:id="@+id/mailicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="48dp"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneicon"
        app:srcCompat="@drawable/ic_baseline_mail_24" />

    <ImageView
        android:id="@+id/houseicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="48dp"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailicon"
        app:srcCompat="@drawable/ic_baseline_house_24" />
</androidx.constraintlayout.widget.ConstraintLayout>